fixed alignment for social media icons

--- a/bp-web-client/angular-app/src/assets/scss/styles.scss
+++ b/bp-web-client/angular-app/src/assets/scss/styles.scss
@@ -3096,13 +3096,13 @@ td.actions {
   position: absolute;
   right: 30px;
   width: 40px;
-  top: 53%;
+  top: 60%;
   transform: translateY(-50%);
   z-index: 99999;
 
   li {
     list-style: none;
-    margin: 0 0 30px 0;
+    margin: 0 0 20px 0;
     a {
       color: #fff;
       i {
